Archive/c4e0b72e397143b145ff1609b95a3c58-4f0e144d2529f0880899ab58231ebbe3/output
In file included from /usr/local/include/boost/thread/thread.hpp:22:0,
                 from /usr/local/include/boost/thread.hpp:13,
                 from main.cpp:1:
/usr/local/include/boost/thread/detail/thread.hpp: In instantiation of ‘void boost::detail::thread_data<F>::run() [with F = long unsigned int]’:
main.cpp:104:1:   required from here
/usr/local/include/boost/thread/detail/thread.hpp:117:17: error: expression cannot be used as a function
                 f();
                 ^
